<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#fff"


    tools:context=".Activity.LogInActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:elevation="0dp">

    </com.google.android.material.appbar.AppBarLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/app_bar"
        android:background="#fff"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="20dp"
        android:paddingTop="@dimen/activity_vertical_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginRight="25dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:src="@drawable/logo_white_text" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_reg"
            android:textColor="#404852"
            android:textSize="17dp"
            android:fontFamily="@font/sf_bold"
            android:textStyle="bold" />



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/tv_login_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_10"
                android:fontFamily="@font/sf_regular"
                android:text="@string/phonenumber"
                android:textColor="@color/contact_number"
                android:textSize="16sp" />

            <com.hbb20.CountryCodePicker
                android:id="@+id/ccp"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                app:defaultNameCode="GB"
                app:textSize="@dimen/space_12"
                android:layout_marginTop="2dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="30dp"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:id="@+id/btn_Signup_phone_no"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:background="@drawable/bg_rounded_button"
                        android:padding="5dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:text="@string/tv_phonenumber"
                            android:textColor="#fff"
                            android:fontFamily="@font/sf_regular"
                            android:textSize="@dimen/text_size_normal" />


                    </RelativeLayout>


                </LinearLayout>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="15dp"
                android:weightSum="1">
                <View
                    android:layout_width="0dp"
                    android:layout_height="0.5dp"
                    android:background="@color/dark_gray"
                    android:layout_gravity="center"
                    android:layout_weight="0.4">

                </View>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"
                    android:gravity="center"
                    android:text="or"></TextView>
                <View
                    android:layout_width="0dp"
                    android:layout_height="0.5dp"
                    android:background="@color/dark_gray"
                    android:layout_gravity="center"
                    android:layout_weight="0.4">

                </View>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_below="@+id/signin_with"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:weightSum="2"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:id="@+id/fb_login_btn"
                android:background="@drawable/xml_textbox_bg"
                android:layout_height="45dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_marginLeft="20dp"

                    android:id="@+id/fb_icon"
                    android:src="@drawable/ic_facebook"
                    android:layout_height="wrap_content">

                </ImageView>

                <TextView
                    android:layout_width="wrap_content"
                    android:text="@string/facebook"
                    android:layout_toRightOf="@+id/fb_icon"
                    android:textColor="@color/black"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    android:fontFamily="@font/sf_lite"
                    android:textSize="@dimen/text_size_normal"
                    android:layout_height="wrap_content">
                </TextView>

            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:id="@+id/btn_google_sign_in"
                android:layout_marginTop="30dp"
                android:background="@drawable/xml_textbox_bg"
                android:layout_height="45dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:id="@+id/gmail_icon"
                    android:src="@drawable/gmail"
                    android:layout_height="wrap_content">

                </ImageView>

                <TextView
                    android:layout_width="wrap_content"
                    android:text="@string/google"
                    android:layout_toRightOf="@+id/gmail_icon"
                    android:textColor="@color/black"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="25dp"
                    android:fontFamily="@font/sf_lite"
                    android:textSize="@dimen/text_size_normal"
                    android:layout_height="wrap_content">

                </TextView>
            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_10"
                android:fontFamily="@font/sf_regular"
                android:text="@string/tv_account"
                android:textColor="@color/contact_number"
                android:textSize="16sp" />
            <TextView
                android:id="@+id/login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_10"
                android:fontFamily="@font/sf_bold"
                android:text="Login"
                android:layout_marginLeft="5dp"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </LinearLayout>





    </LinearLayout>


</RelativeLayout>
