<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#fff"


    tools:context=".Activity.LogInActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:elevation="0dp">

    </com.google.android.material.appbar.AppBarLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/app_bar"
        android:background="#fff"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="20dp"
        android:paddingTop="@dimen/activity_vertical_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginRight="25dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:src="@drawable/logo_white_text" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reset_Password"
            android:textColor="#404852"
            android:textSize="@dimen/text_size_x_large"
            android:fontFamily="@font/sf_bold"
            android:textStyle="bold" />



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/tv_login_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_10"
                android:fontFamily="@font/sf_regular"
                android:text="@string/tv_reset_header_msg"
                android:textColor="@color/contact_number"
                android:textSize="16sp" />

            <com.AutismFriendlyWorld.tcc.util.CustomEditText
                android:id="@+id/et_login_email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="@dimen/space_20"
                android:background="@drawable/xml_textbox_bg"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:padding="@dimen/space_10"
                android:textAlignment="viewStart"
                android:textColor="#000"
                android:hint="Your Email"
                android:textColorHint="@color/dark_gray"
                android:textSize="14sp" />



        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="30dp"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <RelativeLayout
                    android:id="@+id/btn_Sign_in"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:background="@drawable/bg_rounded_button"
                    android:padding="5dp">

                    <com.AutismFriendlyWorld.tcc.util.CustomBoldTextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/btn_reset"
                        android:textColor="#fff"
                        android:textSize="@dimen/text_size_normal" />


                </RelativeLayout>


            </LinearLayout>

        </LinearLayout>


    </LinearLayout>


</RelativeLayout>
