<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#fff"


    tools:context=".Activity.LogInActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:elevation="0dp">

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/app_bar"
            android:background="#fff"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="20dp"
            android:paddingTop="@dimen/activity_vertical_margin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginRight="25dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_horizontal"
                    android:src="@drawable/logo_white_text" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_signin"
                android:textColor="#404852"
                android:textSize="@dimen/text_size_x_large"
                android:fontFamily="@font/sf_bold"
                android:textStyle="bold" />



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/tv_login_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_10"
                    android:fontFamily="@font/sf_regular"
                    android:text="@string/tv_login_header_msg"
                    android:textColor="@color/contact_number"
                    android:textSize="16sp" />

                <com.AutismFriendlyWorld.tcc.util.CustomEditText
                    android:id="@+id/et_login_email"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="@dimen/space_20"
                    android:background="@drawable/xml_textbox_bg"
                    android:ems="10"
                    android:inputType="textEmailAddress"
                    android:padding="@dimen/space_10"
                    android:textAlignment="viewStart"
                    android:textColor="#000"
                    android:hint="Your Email"
                    android:textColorHint="@color/dark_gray"
                    android:textSize="14sp" />

                <com.AutismFriendlyWorld.tcc.util.CustomEditText
                    android:id="@+id/et_login_password"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="@dimen/space_20"
                    android:background="@drawable/xml_textbox_bg"
                    android:ems="10"
                    android:inputType="textPassword"
                    android:padding="@dimen/space_10"
                    android:textAlignment="viewStart"
                    android:textColor="#000"
                    android:hint="Your Password"
                    android:textColorHint="@color/dark_gray"
                    android:textSize="14sp" />


            </LinearLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:text="@string/remember_me"
                    android:textColor="@color/colorPrimaryDark"
                    android:id="@+id/check_box_remember_me"
                    android:buttonTint="@color/colorPrimaryDark"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerInParent="true"
                    android:text="@string/forgot_password"
                    android:textColor="@color/red"
                    android:layout_marginRight="15dp"
                    android:id="@+id/txt_forgot_password" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="30dp"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:id="@+id/btn_Sign_in"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:background="@drawable/bg_rounded_button"
                        android:padding="5dp">

                        <com.AutismFriendlyWorld.tcc.util.CustomBoldTextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:text="@string/btn_signin"
                            android:textColor="#fff"
                            android:textSize="@dimen/text_size_normal" />


                    </RelativeLayout>


                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1">
                <View
                    android:layout_width="0dp"
                    android:layout_height="0.5dp"
                    android:background="@color/dark_gray"
                    android:layout_gravity="center"
                    android:layout_weight="0.4">

                </View>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"
                    android:gravity="center"
                    android:text="or"></TextView>
                <View
                    android:layout_width="0dp"
                    android:layout_height="0.5dp"
                    android:background="@color/dark_gray"
                    android:layout_gravity="center"
                    android:layout_weight="0.4">

                </View>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/space_15"
                android:orientation="vertical">

                <RelativeLayout
                    android:id="@+id/btn_Sign_up"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:background="@drawable/bg_rounded_button"
                    android:padding="5dp">

                    <com.AutismFriendlyWorld.tcc.util.CustomBoldTextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/btn_signup"
                        android:textColor="#fff"
                        android:textSize="@dimen/text_size_normal" />


                </RelativeLayout>


            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="60dp"></View>
        </LinearLayout>
    </ScrollView>



</RelativeLayout>
